syntax = "proto3";

package article.v1;
import "errors/errors.proto";

option go_package = "./articlePb";
option java_multiple_files = true;
option java_package = "article.v1.errors";
option objc_class_prefix = "APIArticleErrors";

enum ErrorReason {
  option (errors.default_code) = 500;

  PARAM_ILLEGAL = 0 [(errors.code) = 404];
  CONTENT_MISSING = 1 [(errors.code) = 400];
}
